<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="beer"
            type="lromanob.beerbox.models.BeerItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="?attr/colorPrimary">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/beer_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{beer.name}"
            tools:text="@string/beer_item_title_example"
            android:textColor="@color/text_color_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/beer_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/beer_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@{beer.tagline}"
            tools:text="@string/beer_item_type_example"
            android:textColor="@color/text_color_secondary"
            app:layout_constraintStart_toEndOf="@id/beer_guideline"
            app:layout_constraintStart_toStartOf="@id/beer_title"
            app:layout_constraintTop_toBottomOf="@+id/beer_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/beer_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:lines="2"
            android:ellipsize="end"
            android:text="@{beer.description}"
            tools:text="@string/beer_item_descr"
            android:textColor="@color/text_color_secondary"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/beer_guideline"
            app:layout_constraintBottom_toTopOf="@+id/beer_more_info"
            app:layout_constraintTop_toBottomOf="@id/beer_type"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/beer_more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beer_item_more_info"
            tools:text="@string/beer_item_more_info"
            android:textAllCaps="true"
            android:textColor="@color/text_color_senape"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/beer_guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/beer_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <ImageView
            android:id="@+id/beer_icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            imageUrl="@{beer.imageUrl}"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_marginEnd="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/beer_guideline"
            android:contentDescription="@string/beer_image"
            tools:srcCompat="@tools:sample/avatars"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>