<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="beer"
            type="it.demo.satispay.beerbox.models.BeerItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/fab_margin"
        android:paddingEnd="@dimen/fab_margin"
        android:paddingBottom="@dimen/fab_margin"
        android:layout_gravity="bottom"
        android:background="@drawable/top_rounded_gray_bg">

        <ImageView
            android:id="@+id/bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bookmark_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/fab_margin"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/beer_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{beer.name}"
            android:hint="@string/beer_item_title_example"
            android:textColor="@color/text_color_primary"
            android:textColorHint="@color/text_color_primary"
            android:textSize="@dimen/text_xlarge"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/beer_guideline"
            app:layout_constraintTop_toBottomOf="@id/bookmark" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/beer_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@{beer.tagline}"
            android:hint="@string/beer_item_type_example"
            android:textColor="@color/text_color_secondary"
            android:textColorHint="@color/text_color_secondary"
            android:textSize="@dimen/text_xlarge"
            app:layout_constraintStart_toEndOf="@id/beer_guideline"
            app:layout_constraintStart_toStartOf="@id/beer_title"
            app:layout_constraintTop_toBottomOf="@+id/beer_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/beer_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:ellipsize="end"
            android:text="@{beer.description}"
            android:hint="@string/beer_item_descr"
            android:textColor="@color/text_color_secondary"
            android:textColorHint="@color/text_color_secondary"
            android:textSize="@dimen/text_large"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/beer_guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/beer_type"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/beer_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <ImageView
            android:id="@+id/beer_icon"
            imageUrl="@{beer.imageUrl}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/beer"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_marginStart="@dimen/margin_extra_small"
            android:layout_marginEnd="@dimen/margin_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/beer_title"
            app:layout_constraintEnd_toEndOf="@id/beer_guideline"
            android:contentDescription="@string/beer_image"
            tools:srcCompat="@tools:sample/avatars"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>