<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".ui.activity.MainActivity">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/CustomSearchView"
            android:textCursorDrawable="@null"
            app:iconifiedByDefault="false"
            app:defaultQueryHint="@string/text_hint_search"
            app:queryBackground="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/add_filter"
            android:layout_marginEnd="@dimen/margin_global"
            android:layout_marginStart="@dimen/margin_global"
            android:layout_marginBottom="@dimen/margin_medium"
            android:background="@drawable/rounded_gray_bg"
            />

        <TextView
            android:id="@+id/add_filter"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/margin_global"
            android:background="@drawable/circular_filter_bg"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/margin_medium"
            android:text="@string/plus"
            android:contentDescription="@string/add_hint"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/searchView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/searchView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_beers_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_filter"
            tools:itemCount="5"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rv_beers_filter"
            />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_beers_filter"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_beers_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_beer" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
